--- a/_header.tex
+++ b/_header.tex
@@ -13,6 +13,7 @@
 
 % The following package makes prettier tables.  We're all about the bling!
 \usepackage{booktabs}
+\usepackage{longtable}
 
 % The units package provides nice, non-stacked fractions and better spacing
 % for units.
